Revision history for App-Cmd

{{$NEXT}}

0.316     2012-02-11 10:50:46 America/New_York
          fix the test of "echo" on Win32 (thanks, Chris Williams)

0.315     2012-02-10 09:08:49 America/New_York
          totally worthless release made by mistake

0.314     2012-01-03 21:38:59 America/New_York
          adds App::Cmd::Tester::CaptureExternal to capture output from
          external subcommands (thanks, David Golden)

          if there's no Pod =head1 NAME, a Pod::Weaver-esque #ABSTRACT will be
          respected (thanks, Andreas Hernitscheck)

0.313     2011-12-23 13:29:53 America/New_York
          don't load Text::Abbrev until it's needed (thanks, Olivier Mengué)

0.312     2011-08-17 18:02:26 America/New_York
          typo fixes to docs (thanks, Glenn Fowler)

          add the prepare_argv method (thanks, Ingy döt Net)

0.311     2011-03-17 22:42:19 America/New_York
          require the correct version of Getopt::Long::Descriptive (thanks,
          Glen Hinkle)

0.310     2010-12-11
          classes are now loaded with Class::Load, which should avoid bugs
          where classes are not succesfully loaded by program execution
          continues anyway (thanks to Kent Fredric)

          more checking is now done to ensure that plugins are members of the
          correct base class (thanks, Kent Fredric)

0.309     2010-11-12

          skip a failing test on perl 5.8.x

0.308     2010-11-08

          When App::Cmd::Setup tries to load MyApp::Command, and it exists but
          will not compile, the exception will now propagate.  Previously, it
          failed silently and App::Cmd::Command was used instead.  (bug found
          and fixed and tested for by Kent Fredric; thanks!)

0.307     2010-03-09
          bump up required version of Getopt::Long::Descriptive

0.306     2010-03-08
          return the App::Cmd object (when non-Simple) in the Tester result
          allow App::Cmd::Tester subclasses to chose another Result class
